--- a/kibana-service.yaml
+++ b/kibana-service.yaml
@@ -16,5 +16,6 @@ spec:
       targetPort: 5601
   selector:
     io.kompose.service: kibana
+  type: LoadBalancer # Change this line to specify LoadBalancer type
 status:
   loadBalancer: {}
