--- a/elasticsearch-service.yaml
+++ b/elasticsearch-service.yaml
@@ -19,5 +19,6 @@ spec:
       targetPort: 9300
   selector:
     io.kompose.service: elasticsearch
+  type: LoadBalancer # Change this line to specify LoadBalancer type
 status:
   loadBalancer: {}
