--- a/ingress.yaml
+++ b/ingress.yaml
@@ -12,7 +12,7 @@ metadata:
     alb.ingress.kubernetes.io/security-groups: sg-0bbe4031b0e2ccdc6
     external-dns.alpha.kubernetes.io/hostname: kibana.example.com # Replace with your hostname
     alb.ingress.kubernetes.io/load-balancer-name: my-kibana-lb
-    alb.ingress.kubernetes.io/certificate-arn: 
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:477534767521:certificate/20076d28-62c2-4224-82c3-8a15681d3a3a
 spec:
   rules:
     - host: kibana.example.com # Replace with your hostname
