--- a/ingress.yaml
+++ b/ingress.yaml
@@ -23,5 +23,5 @@ spec:
             backend:
               service:
                 name: kibana
-                port:
-                  name: "5601"
+                port: 5601
+                 
